--- a/examples/react-vite/src/styles.css
+++ b/examples/react-vite/src/styles.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 :root {
-  --font-family: "Roboto", sans-serif;
+  --font-family: 'Roboto', sans-serif;
 }
 
 * {
@@ -37,7 +37,7 @@
   border-radius: 50%;
 }
 .coffee-header__buttons::after {
-  content: "";
+  content: '';
   width: 8px;
   height: 8px;
   position: absolute;
@@ -69,7 +69,9 @@
   top: 10px;
   right: 10px;
   background-color: #9b9091;
-  box-shadow: -12px 0 0 #9b9091, -24px 0 0 #9b9091;
+  box-shadow:
+    -12px 0 0 #9b9091,
+    -24px 0 0 #9b9091;
 }
 .coffee-medium {
   width: 90%;
@@ -80,7 +82,7 @@
   background-color: #bcb0af;
 }
 .coffee-medium:before {
-  content: "";
+  content: '';
   width: 90%;
   height: 100px;
   background-color: #776f6e;
@@ -98,7 +100,7 @@
   background-color: #231f20;
 }
 .coffe-medium__exit::before {
-  content: "";
+  content: '';
   width: 50px;
   height: 20px;
   border-radius: 0 0 50% 50%;
@@ -108,7 +110,7 @@
   background-color: #231f20;
 }
 .coffe-medium__exit::after {
-  content: "";
+  content: '';
   width: 10px;
   height: 10px;
   position: absolute;
@@ -125,7 +127,7 @@
   background-color: #231f20;
 }
 .coffee-medium__arm::before {
-  content: "";
+  content: '';
   width: 15px;
   height: 5px;
   position: absolute;
@@ -143,7 +145,7 @@
   border-radius: 0 0 70px 70px / 0 0 110px 110px;
 }
 .coffee-medium__cup::after {
-  content: "";
+  content: '';
   width: 20px;
   height: 20px;
   position: absolute;
@@ -261,7 +263,7 @@
   border-radius: 10px;
 }
 .coffee-footer::after {
-  content: "";
+  content: '';
   width: 106%;
   height: 26px;
   position: absolute;
