--- a/examples/react-vite/src/coffee/coffee.css
+++ b/examples/react-vite/src/coffee/coffee.css
@@ -22,7 +22,7 @@
   border-radius: 50%;
 }
 .coffee-header__buttons::after {
-  content: "";
+  content: '';
   width: 8px;
   height: 8px;
   position: absolute;
@@ -54,7 +54,9 @@
   top: 10px;
   right: 10px;
   background-color: #9b9091;
-  box-shadow: -12px 0 0 #9b9091, -24px 0 0 #9b9091;
+  box-shadow:
+    -12px 0 0 #9b9091,
+    -24px 0 0 #9b9091;
 }
 .coffee-medium {
   width: 90%;
@@ -65,7 +67,7 @@
   background-color: #bcb0af;
 }
 .coffee-medium:before {
-  content: "";
+  content: '';
   width: 90%;
   height: 100px;
   background-color: #776f6e;
@@ -83,7 +85,7 @@
   background-color: #231f20;
 }
 .coffe-medium__exit::before {
-  content: "";
+  content: '';
   width: 50px;
   height: 20px;
   border-radius: 0 0 50% 50%;
@@ -93,7 +95,7 @@
   background-color: #231f20;
 }
 .coffe-medium__exit::after {
-  content: "";
+  content: '';
   width: 10px;
   height: 10px;
   position: absolute;
@@ -110,7 +112,7 @@
   background-color: #231f20;
 }
 .coffee-medium__arm::before {
-  content: "";
+  content: '';
   width: 15px;
   height: 5px;
   position: absolute;
@@ -128,7 +130,7 @@
   border-radius: 0 0 70px 70px / 0 0 110px 110px;
 }
 .coffee-medium__cup::after {
-  content: "";
+  content: '';
   width: 20px;
   height: 20px;
   position: absolute;
@@ -246,7 +248,7 @@
   border-radius: 10px;
 }
 .coffee-footer::after {
-  content: "";
+  content: '';
   width: 106%;
   height: 26px;
   position: absolute;
